[package]
name = "itsy"
version = "0.5.0"
edition = "2024"
authors = ["Dennis Möhlmann <dmo479@gmail.com>"]
description = "Strongly typed scripting language with a rusty syntax and nice Rust integration."
documentation = "https://docs.rs/itsy/"
repository = "https://github.com/sinesc/itsy.git"
license = "MIT"
readme = "README.md"
keywords = [ "language", "scripting" ]

[workspace]
members = [ "itsy-derive" ]

[profile.release]
#strip = true
#lto = true
#codegen-units = 1

[features]
default = [ "compiler", "runtime", "call_function" ]
compiler = [ "nom" ]
runtime = [ ]
call_function = [ ]
debugging = [ ]
symbols = [ ]
comments = [ ]
ice_panics = [ ]
derive = [ "itsy-derive" ]

[dependencies]
nom = { version = "7.1.1", default-features = false, features = [ "alloc" ], optional = true }
paste = "1.0"
itsy-derive = { version = "0.5", path = "itsy-derive", optional = true }

[target.'cfg(windows)'.dev-dependencies]
winapi-util = "0.1"

[lib]
name = "itsy"
path = "src/lib.rs"

[[example]]
name = "run"
required-features = [ "compiler", "runtime"  ]

[[example]]
name = "debug-run"
required-features = [ "compiler", "runtime", "debugging", "symbols" ]

[[example]]
name = "profile-run"
required-features = [ "compiler", "runtime", "debugging" ]

[[example]]
name = "bench"
required-features = [ "compiler", "runtime" ]

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false
required-features = [ "compiler", "runtime", "call_function" ]

[[example]]
name = "itsyc"
required-features = [ "compiler" ]

[[example]]
name = "itsyvm"
required-features = [ "runtime" ]